feat(connection): add coordinator websocket
